fixed the grid alignment for the cards

--- a/style.scss
+++ b/style.scss
@@ -658,36 +658,29 @@ footer {
                 }
 
                 &:nth-child(even) {
-                    background-color: rgb(73, 40, 40);
-
                     &>:first-child {
-                        grid-column: 1 / 2;
+                        grid-column: 2 / 3;
                         grid-row: 2 / 3;
                         align-self: center;
                     }
 
                     &>:nth-child(2) {
-                        grid-column: 2 / 3;
+                        grid-column: 1 / 2;
                         grid-row: 1 / 6;
                         align-self: center;
                     }
 
                     &>:nth-child(3) {
-                        grid-column: 1 / 2;
+                        grid-column: 2 / 3;
                         grid-row: 3 / 4;
                         align-self: center;
                     }
 
                     &>:last-child {
-                        grid-column: 1 / 2;
-                        // grid-column-start: 1;
-                        // grid-column-end: 2;
+                        grid-column: 2 / 3;
                         grid-row: 4 / 5;
-                        // grid-row-start: 4;
-                        // grid-row-end: 4;
                         justify-self: start;
                         align-self: center;
-                        width: auto;
                     }
                 }
             }
